<resources>
    <string name="app_name">Secure@Home</string>
    <string name="action_settings">Settings</string>
    <string name="txtUsername">Benutzername</string>
    <string name="txtLogin">Login</string>
    <string name="txtPassword">Passwort</string>
    <string name="txtLoginButton">Login</string>
    <string name="txtNoUser">Noch kein Konto? Jetzt registrieren.</string>
    <string name="txtWelcome">Willkommen bei Secure@Home. Bitte melden Sie sich mit Ihren Benutzerdaten an.</string>
    <string name="txtNewUserRegistration">Registrierung</string>
    <string name="txtRegistrationIntro">Bitte geben Sie folgnde Daten ein, um ein neues Konto bei Secure@Home zu erstellen.</string>
    <string name="txtFirstname">Vorname</string>
    <string name="txtLastname">Nachname</string>
    <string name="txtEmail">E-Mail</string>
    <string name="txtUsernameNewUser">Gewünschter Benutzername</string>
    <string name="txtPasswordAgain">Passwort wiederholen</string>
    <string name="txtRegistrateButton">Konto erstellen</string>
    <string name="txtWebcamView">Übertragung</string>
    <string name="txtStartBroadcast">Übertragung starten</string>
    <string name="txtServerConnection">Server-Verbindung</string>
    <string name="txtServerConnectionIntro">Bitte geben Sie im Folgenden die URL des Webservers an:</string>
    <string name="txtIpAdress">IP-Adresse Webserver</string>
    <string name="txtServerConnectionButton">Verbindung herstellen</string>
    <string name="txtRegistrateWebcamButton">Webcam registrieren</string>
    <string name="txtWebcamDescription">Beschreibung (z.B. Standort, Stockwerk, )</string>
    <string name="txtWebcamRegistrationInfo">Dieses Gerät wurde noch nicht als Webcam registriert. Bitte geben Sie eine kurzbeschreibung zu diesem Gerät ein:</string>
    <string name="txtCancelBroadcast">Übertragung Beenden</string>
</resources>
