<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ServerConnectionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#F2F2F2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="#B61717">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtServerConnection"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:textColor="#E3DDBF"
                android:textSize="30dp"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txtServerConnectionIntro"
                android:id="@+id/textView2"
                android:layout_marginBottom="10dp"
                android:textColor="#000" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtIpAdress"
                android:hint="@string/txtIpAdress"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtServerConnectionButton"
                android:id="@+id/btnServerConnection"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
