<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="WebcamRegistrationActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#F2F2F2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="#B61717">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txtNewUserRegistration"
                    android:id="@+id/textView"
                    android:layout_gravity="center"
                    android:textColor="#E3DDBF"
                    android:textSize="30dp"
                    android:layout_marginTop="15dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txtWebcamRegistrationInfo"
                    android:id="@+id/textView2"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtWebcamDescription"
                    android:hint="@string/txtWebcamDescription"
                    android:layout_marginBottom="10dp"/>


                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtRegistrateWebcamButton"
                    android:id="@+id/btnRegistrateWebcam"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
